test/1.4/errors/T_WSTRAYIS.dml
/*
  © 2026 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// COMPILE-ONLY
/// ERROR EBADCONDSTMT T_WSTRAYIS.dml

template t {}

/// WARNING WSTRAYIS
group g; is t;
group g;
    /// WARNING WSTRAYIS
    is t;

/// WARNING WSTRAYIS
group g; is t;
    /// WARNING WSTRAYIS
    is t;
    /// WARNING WSTRAYIS
    is t;

group g
    is t;
    /// WARNING WSTRAYIS
    is t;

/// WARNING WSTRAYIS
group g1; group g2; is t; group g3;

// no warning
// stray_is_check() could be changed to catch this, but the suggestion would
// hurt rather than help.
// If someone intentionally wrote something like the below, presumably their
// intention would be to have the 'is' affect every group. Blindly following
// the suggestion to remove the semicolon right before the 'is' would silence
// the warning but only have the 'is' affect g3.
// Patterns like these, if they ever would occur, are just too far gone for
// us to salvage.
group g1; group g2; group g3;
    is t;

bank b {
    register r1 size 4
        /// WARNING WSTRAYIS
        @ unmapped_offset; is t;
    register r2 size 4
        @ unmapped_offset;
        /// WARNING WSTRAYIS
        is t;
}

// no warning
group g is t;
is t; is t;

// Test every grammatically distinct kind of object block
in each (subdevice) {
    /// WARNING WSTRAYIS
    group g; is t;
}
#if (true) {
    /// WARNING WSTRAYIS
    group g; is t;
} #else {
    // this is slightly questionable, but not enough so for us to care
    /// WARNING WSTRAYIS
    group g; is t;
}

template u {
    shared method m() {}
    // no WTEMPLATEIS if WSTRAYIS is detected
    /// WARNING WSTRAYIS
    group g; is t;
}

group g {
    /// WARNING WSTRAYIS
    group g; is t;
    // top-level #if:s are grammatically distinct
    #if (true) {
        /// WARNING WSTRAYIS
        group g; is t;
    } #else {
        /// WARNING WSTRAYIS
        group g; is t;
    }
}
